<?xml version="1.0"?>
<package>
  <name>voxel_map</name>
  <version>1.0.0</version>

  <description>
   This is a modified LiDAR odometry based on FAST-LIO.
   This repo use voxel map instead of point cloud map during
   the localization.
  </description>

  <maintainer email="fuzhang@hku.hk">Fu Zhang</maintainer>

  <license>BSD</license>

  <author email="ycj1@connect.hku.hk">Chongjian Yuan</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>livox_ros_driver</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>livox_ros_driver</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
  </export>
</package>
